# better_self

./: .gitignore  AGENTS.md  README.md  UserStories.md  app.py  gradle.properties  pyproject.toml  quotes_seed.json  requirements-dev.txt  requirements.txt
tests/: test_backup_restore.py
tests/fixtures/: etalon_backup.db
