[project]
name = "betterself"
version = "0.1.0"
description = "BetterSelf app with habits and tasks"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "flet>=0.80.5",
]

[tool.flet]
org = "com.example"
product = "BetterSelf"
company = "Example"
copyright = "Copyright (C) 2026"

[tool.flet.app]
exclude = [
  ".venv",
  "__pycache__",
  "*.pyc",
  "*.pyo",
  "journal.db",
]

[tool.flet.compile]
app = true
packages = true

[tool.flet.cleanup]
app = true

[tool.flet.android]
split_per_abi = true
target_arch = ["arm64-v8a", "armeabi-v7a"]
